syntax = "proto2";

package chre_cross_validation_wifi;

option java_package = "com.google.android.chre.nanoapp.proto";
option java_outer_classname = "ChreCrossValidationWifi";

enum MessageType {
  // Reserved for corrupted messages
  UNDEFINED = 0;

  // H2C: Host informing nanoapp to start a new step
  // Payload must be StepStartCommand Message
  STEP_START = 1;

  // C2H: Nanoapp informing host on the result of a step
  // Payload must be chre_test_common::TestResult message.
  // This will also include the final validation result if this is the step
  // result for the VALIDATE step.
  STEP_RESULT = 2;

  // H2C: Host passing down wifi scan result data to CHRE to validate.
  // There may be multiple messages with this type sent.
  SCAN_RESULT = 3;
}

enum Step {
  // The initial step where no action is performed.
  INIT = 0;
  // The step where the nanoapp is configured to monitor for wifi scans.
  SETUP = 1;
  // The validate step where the data is gathered and compared.
  VALIDATE = 2;
}

message StepStartCommand {
  optional Step step = 1;
}
